# investment-dashboard

./: .env.example  .gitignore  CLAUDE.md  DESIGN.json  DESIGN.md  PRODUCT.md  README.md  moomoo-opend-setup.md  pyproject.toml  reddit-setup.md  tooling-research.md
.claude/: settings.json
.claude/agents/: prompt-auditor.md  quiet-ledger-design-reviewer.md
.claude/skills/forbidden-framing-check/: SKILL.md
.claude/skills/prompt-bump/: SKILL.md
assets/: style.css
briefs/: holdings-view-v2-backlog.md  holdings-view.md
data/: macro-events.json
plan/: share-with-friends-multi-broker.md  v3-analyst-tiles.md  v3-foresight-execution.md  v3-phase-a-execution.md  v3-phase-d-d1-d3-execution.md  v3-phase-d.md  v3-phase-d5-execution.md  v3-phase-e-followups.md  v3-quiet-collapse-row-pulse.md  v3-reddit-sentiment.md  v3-stack-rewrite.md  v3-tile-prompt-v3.md
plan/retired/: v4-prompt-watch-log.md
src/api/: __init__.py  _advisor_guard.py  anomaly_translator.py  benchmark.py  benchmark_insight.py  company_events.py  concentration.py  concentration_insight.py  digest.py  dividends.py  dividends_insight.py  earnings.py  earnings_insight.py  foresight.py  foresight_insight.py  fx.py  holdings_payload.py  i18n.py  insight.py  macro_events.py  main.py  market_hours.py  models.py  preview.py  preview_insight.py  prices.py  realtime.py  reddit_sentiment.py  sentiment_insight.py
src/api/analysts/: __init__.py  _base.py  fundamentals.py  news.py  sentiment.py  technical.py
src/api/data/: __init__.py  anomalies.py  moomoo_client.py  notes.py  prices.py  quotes.py  reddit_cache.py
src/api/routes/: anomalies.py  benchmark.py  benchmark_insight.py  concentration.py  concentration_insight.py  digest.py  dividends.py  dividends_insight.py  earnings.py  earnings_insight.py  foresight.py  foresight_insight.py  holdings.py  insight.py  notes.py  preview.py  preview_insight.py  prices.py  quotes.py  reddit.py  sentiment_insight.py  stream.py  watchlist.py
src/dashboard/: __init__.py  __main__.py  app.py  theme.py
src/dashboard/data/: anomalies.py  moomoo_client.py  positions.py  prices.py
web/: README.md  package-lock.json  package.json
(+43 files in other folders)
