[project]
name = "investment-dashboard"
version = "0.2.0"
description = "Personal investment dashboard on top of moomoo OpenD. The Quiet Ledger."
readme = "README.md"
authors = [
    { name = "krux3009", email = "tanlixuan2005@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.40",
    "duckdb>=1.5.2",
    "fastapi>=0.115",
    "moomoo-api==10.4.6408",
    "pandas>=3.0.2",
    "pydantic>=2.9",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.32",
    "vadersentiment>=3.3.2",
    "yfinance>=0.2.50",
]

[project.scripts]
api = "api.main:cli"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "api"
module-root = "src"
